Fix overflow: restore default padding, narrow news box width

--- a/jemdoc.css
+++ b/jemdoc.css
@@ -35,8 +35,8 @@ body {
 #layout-content {
 	padding-top: 0.0em;
 	padding-left: 1.0em;
-	padding-right: 1.5em;
-    max-width: 960px;
+	padding-right: 1.0em;
+    max-width: none;
     border: none;
     background: transparent;
     text-align: left;
